working on terminal script nicities

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 BAUD_RATE="FILL IN YOUR BAUD RATE"
 MAX_COMMANDS="FILL IN YOUR MAX COMMANDS"
 MAX_BUFFER_SIZE="FILL IN YOUR MAX BUFFER SIZE"
-PORT="FILL IN YOUR PORT (CAN BE FOUND USING list_ports.py)"
+PORT="FILL IN YOUR PORT NUMBER (CAN BE FOUND USING list_ports.py)"
